fixed browser incompatability in chrome and added styles for scrollbar

--- a/src/assets/styles/base.scss
+++ b/src/assets/styles/base.scss
@@ -1,54 +1,71 @@
-/* color palette from <https://github.com/vuejs/theme> */
-
 *,
 *::before,
 *::after {
-  box-sizing: border-box;
-  margin: 0;
-  padding: 0;
-  background: transparent;
-  font-family: inherit;
-  text-decoration: none;
-  outline: none;
-  border: none;
-  font-weight: normal;
-  color: inherit;
-  line-height: inherit;
-  transition: left .3s ease-in-out,   background-color 0.5s linear;
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+    background: transparent;
+    font-family: inherit;
+    text-decoration: none;
+    outline: none;
+    border: none;
+    font-weight: normal;
+    color: inherit;
+    line-height: inherit;
+    transition: left .3s ease-in-out, background-color 0.5s linear;
+    scrollbar-color: var(--main-color, #596c94) var(--dark-blue, #323a53);
+    scrollbar-width: thin;
 }
 
 
 body {
-  min-height: 100vh;
-  color: var(--color-text);
-  line-height: 1.6;
-  font-family:
-    Roboto,
-    sans-serif,
-    Inter,
-    -apple-system,
-    BlinkMacSystemFont,
-    'Segoe UI',
-    Roboto,
-    Oxygen,
-    Ubuntu,
-    Cantarell,
-    'Fira Sans',
-    'Droid Sans',
-    'Helvetica Neue';
-  font-size: 15px;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+    min-height: 100vh;
+    color: var(--color-text);
+    line-height: 1.6;
+    font-family:
+        Roboto,
+        sans-serif,
+        Inter,
+        -apple-system,
+        BlinkMacSystemFont,
+        'Segoe UI',
+        Oxygen,
+        Ubuntu,
+        Cantarell,
+        'Fira Sans',
+        'Droid Sans',
+        'Helvetica Neue';
+    font-size: 15px;
+    text-rendering: optimizeLegibility;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
 }
 
 button {
-  cursor: pointer;
+    cursor: pointer;
 }
 
 .dark {
-  background-color: var(--main-color);
+    background-color: var(--main-color, #596c94);
 }
+
 .light {
-  background: var(--base-white);
+    background: var(--base-white, #fff);
 }
+
+::-webkit-scrollbar {
+    width: 5px;
+
+}
+::-webkit-scrollbar-thumb {
+    color: var(--main-color, #596c94);
+}
+
+::-webkit-scrollbar-track {
+    background: var(--dark-blue, #323a53);
+}
+  
+::-webkit-scrollbar-thumb {
+    background: var(--main-color, #596c94);
+}
+  
